# scidata

./: .gitignore  CMakeLists.txt  README.md
config/: CMakeLists.txt  global_build_config.h.in
examples/: analyse.xml
examples/data/: dataRhIII-HCl.csv  dataRhIII-HCl.xlsx  dataTest1.csv  dataTest1.xlsx
lib/: CMakeLists.txt  Column.h  Config.cpp  Config.h  DataColumn.cpp  DataColumn.h  DataContainer.cpp  DataContainer.h  DataDescription.cpp  DataDescription.h  DataParser.cpp  DataParser.h  InputData.cpp  InputData.h  Parameter.cpp  Parameter.h  ParameterSet.cpp  ParameterSet.h  SColumn.h  SConfig.cpp  SConfig.h  SInputData.cpp  SInputData.h  SParameter.h  SParameterSet.cpp  SParameterSet.h
tests/: CMakeLists.txt  TestConfig.cpp  TestFile.cpp
